formation et expérience

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <title>CV - baye Moussa</title>  
         <link rel="icon" type="image/jpg" href="/images/favicone1.jpg" />
         <link href="bootstrap.css" rel="stylesheet">
-        <link href="tuto.css" rel="stylesheet"><!--
-        <link rel="stylesheet" href="css/bootstrap-3/bootstrap-3.3.2-dist/css/bootstrap.min.css">-->
-   		
+        <link href="tuto.css" rel="stylesheet">
    	</head>
     <body>
        <div id="bloc_page" class="container">
@@ -43,7 +41,6 @@
                 </div>
 
                 <div class="col-lg-6" id="tof_et_presentation">      
-                        <!--<div id="photo_zozor" class="col-lg-3"><img src="images/ma_tof.jpg" alt="Ma photo"   class="img-rounded col-lg-12"></div>-->
                         <section id="text_article" class="col-lg-offset-1 col-lg-10">
                             <p class="text-justify">Étudiant en deuxième année de master Informatique à l'université de Bordeaux 1 et dans le cadre de cette formation, je suis à la recherche d'un stage d'une durée de six mois à compter du mois d'avril prochain.<br>
                             Passionné de l'informatique et des nouvelles technologies, j'ai acquis une bonne maîtrise de beaucoup de langages de programmation.<br>
