--- a/myexperience.html
+++ b/myexperience.html
@@ -24,34 +24,32 @@
 		        </div>
 	      	</div>
 	      	<div class="row" id="plaquette">
-		       	<div class="col-lg-4"> 
+		       	<div class="col-lg-3"> 
 		       		<aside id="aside_exp_form" class="col-lg-12">
-                    	<p id="titre_aside_exp_form" class="text-center" class="col-lg-12"> Expérience professionnelle </p>
+                    	<p id="titre_aside_exp_form" class="text-center" class="col-lg-12">Expérience professionnelle </p>
                 	</aside>
 		    	</div>
 		        
 		        <div class="col-lg-8" id="plaquette_titre"> 
 			        <div class="row" id="row-exp_form">	
-			        	<div class="col-lg-2"> 		        		
-	                        <div id="annee_formation"><p id="annee" class="text-justify">06/2013 09/2013</p></div>
+			        	<div class="col-lg-12"> 		        		
+	                        <div id="titre_exp_form"><p id="annee" class="text-justify"></p>Développement d'une IHM pour gestion de données avec VBA</div><hr>
 			        	</div>
-			        	<div class="col-lg-10"> 
+			        	<div class="col-lg-12"> 
 			        		<section id="sujet_exp_form">
-	                            <p id="titre_exp_form">Stage de Licence 3 mois CHEZ COFELY ENDEL, Bordeaux</p>
-	                            <p class="text-justify"><strong>Développement d'une IHM et gestion de données:</strong><br>
+	                            <p class="text-justify"><strong>Stage de Licence 3 chez COFELY ENDEL Bordeaux, 06/2013-09/2013, 3 mois</strong><br>
 	                                Il s'agit de mettre en place une interface graphique conviviale et ergonomique permettant à des utilisateurs pas forcément informaticiens de pouvoir ajouter , supprimer, modifier, chercher et trier des données en grande quantité dans des fichiers EXCEL accessibles dans le réseau des employers. On a utilisé VBA comme langage de programmation pour coder toutes ces fonctionnalités et le système d'interfaçage de Excel qui permet de lier des boutons à des macros et donc d’exécuter une multitude de taches derrières. Pour la même occasion, un graphisme permettant de donner une évolution concrète des chiffres et des données est mis à disposition des utilisateurs.
 	                                </p>	            
                         	</section>
 			        	</div> 
 			        </div>	
 			        <div class="row" id="row-exp_form">
-			        	<div class="col-lg-2"> 
-			        		<div id="annee_formation"><p id="annee" class="text-justify">05/2009 08/2009</p></div>
+			        	<div class="col-lg-12"> 
+			        		<div id="titre_exp_form"><p id="annee" class="text-justify"></p>Conception et gestion de base de données avec Java et SQL</div><hr>
 			        	</div>
-			        	<div class=" col-lg-10">  
+			        	<div class=" col-lg-12">  
 			        		<section id="sujet_exp_form">
-	                            <p id="titre_exp_form">Stage Deug 4 mois BICIS (BNP PARIBAS) (SENEGAL)</p>
-	                            <p class="text-justify"><strong>Conception et gestion de base de données:</strong><br>
+	                            <p class="text-justify"><strong>Stage Deug, au BICIS BNP PARIBAS, 05/2009-08/2009, 4 mois</strong><br>
 	                                J'avais pour mission principale la réalisation d’une nouvelle base de données pour la gestion du parc client spécial ainsi que de l’interface utilisateur et mettre en place un système de rappel automatique sur certains éléments clés. Aussi je participais au développement d’une application cliente permettant la saisie et offrant des visualisations dynamiques et des rapports à fins d’analyses multidimensionnelles. Les technologies utilisées sont java et Sql.
 	                                </p>	            
                         	</section>
