ajout des glyphicones et correction de des compétences

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>  
         <link rel="icon" type="image/jpg" href="/images/favicone1.jpg" />
-        <link href="bootstrap.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">
    	</head>
     <body>
@@ -13,29 +14,29 @@
                     <h1>MOUSSA SOW</h1>
                     <h3>Master 2 Informatique, Génie logiciel, Conduite de projet</h3>
                 </div>
-                <div id="" class="col-lg-12">
+                <div id="test_nav" class="col-lg-12">
                     <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
                             <ul id="nav_ul_barre_page">
-                                <li id="nav_li_barre_page"><a href="index.html" >À propos de moi</a></li>|
-                                <li id="nav_li_barre_page"><a href="myformation.html">Formation</a></li>|
-                                <li id="nav_li_barre_page"><a href="myexperience.html">Expérience</a></li>| 
-                                <li id="nav_li_barre_page"><a href="mycompetence.html">Compétences</a></li>|
-                                <li id="nav_li_barre_page"><a href="portefolio.html">Portefolio</a></li>|
-                                <li id="nav_li_barre_page"><a href="contact.html">Contact</a></li>|
-                                <li id="nav_li_barre_page"><a href="telecharger.html">Télécharger CV</a></li>
+                                <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                                <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
+                                <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
+                                <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
+                                <li id="nav_li_barre"><a href="portefolio.html"> <span class="glyphicon glyphicon-tasks"></span> Portefolio</a></li>
+                                <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
+                                <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
                             </ul>
                     </nav>
                 </div>
             </div>
             <div class="row" id="corps_index">
                 <div class="col-lg-3">
-                    <aside id="tataaside">
+                    <aside id="tataaside"> 
                         <h1><strong>À propos:</strong></h1>
                         <p> SOW MOUSSA : <br></p>    
                         <p>20 rue eugene le roy <br>
                             33800 bordeaux, apt 22  <br>
-                            Tél: +33 (0)6 26 92 00 08 <br>
-                            Mail: mmoussasow@gmail.com<br>  
+                            <span class="glyphicon glyphicon-phone-alt"></span>: +33 (0)6 26 92 00 08 <br> 
+                            <span class="glyphicon glyphicon-send">: mmoussasow@gmail.com<br>  
                         </p>
                     </aside>
                 </div>
@@ -73,9 +74,9 @@
                 <footer class="col-lg-12" id="footer_index">
                     <div id="pied" class="col-lg-12">
                         <ul id="nav_ul_barre_page">
-                            <li id="nav_li_barre_page"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
-                            <li id="nav_li_barre_page"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
-                            <li id="nav_li_barre_page"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
+                            <li id="nav_li_barre"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
+                            <li id="nav_li_barre"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
+                            <li id="nav_li_barre"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
                         </ul>
                     </div>
                 </footer>
