--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@ mail($to,$subject,$message,$headers);
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
         <link href="bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">
         
     </head>
@@ -22,15 +23,15 @@ mail($to,$subject,$message,$headers);
       <div class="row">
         <div id="tete" class="col-lg-12">
             <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
-                    <ul id="nav_ul_barre_page">
-                        <li id="nav_li_barre_page"><a href="index.html" >À propos de moi</a></li>|
-                        <li id="nav_li_barre_page"><a href="myformation.html">Formation</a></li>|
-                        <li id="nav_li_barre_page"><a href="myexperience.html">Expérience</a></li>| 
-                        <li id="nav_li_barre_page"><a href="mycompetence.html">Compétences</a></li>|
-                        <li id="nav_li_barre_page"><a href="portefolio.html">Portefolio</a></li>|
-                        <li id="nav_li_barre_page"><a href="contact.html">Contact</a></li>|
-                        <li id="nav_li_barre_page"><a href="telecharger.html">Télécharger CV</a></li>
-                    </ul>
+                            <ul id="nav_ul_barre_page">
+                                <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                                <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
+                                <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
+                                <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
+                                <li id="nav_li_barre"><a href="portefolio.html"> <span class="glyphicon glyphicon-tasks"></span> Portefolio</a></li>
+                                <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
+                                <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
+                            </ul>
             </nav>
         </div>
 
@@ -95,9 +96,9 @@ mail($to,$subject,$message,$headers);
         <footer class="col-lg-12">
             <div id="pied" class="col-lg-12">
                 <ul id="nav_ul_barre_page">
-                    <li id="nav_li_barre_page"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
-                    <li id="nav_li_barre_page"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
-                    <li id="nav_li_barre_page"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
+                    <li id="nav_li_barre"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
+                    <li id="nav_li_barre"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
+                    <li id="nav_li_barre"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
                 </ul>
             </div>
         </footer>
