--- a/myexperience.html
+++ b/myexperience.html
@@ -4,22 +4,23 @@
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
         <link href="bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">        
     </head>
   	<body>
-	    <div class="container">
+	    <div id="bloc_page"  class="container">
 	      	<div class="row">
 		        <div id="tete" class="col-lg-12">
 		            <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
-		                    <ul id="nav_ul_barre_page">
-		                        <li id="nav_li_barre_page"><a href="index.html" >À propos de moi</a></li>|
-		                        <li id="nav_li_barre_page"><a href="myformation.html">Formation</a></li>|
-		                        <li id="nav_li_barre_page"><a href="myexperience.html">Expérience</a></li>| 
-		                        <li id="nav_li_barre_page"><a href="mycompetence.html">Compétences</a></li>|
-		                        <li id="nav_li_barre_page"><a href="portefolio.html">Portefolio</a></li>|
-		                        <li id="nav_li_barre_page"><a href="contact.html">Contact</a></li>|
-		                        <li id="nav_li_barre_page"><a href="telecharger.html">Télécharger CV</a></li>
-		                    </ul>
+                            <ul id="nav_ul_barre_page">
+                                <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                                <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
+                                <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
+                                <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
+                                <li id="nav_li_barre"><a href="portefolio.html"> <span class="glyphicon glyphicon-tasks"></span> Portefolio</a></li>
+                                <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
+                                <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
+                            </ul>
 		            </nav>
 		        </div>
 	      	</div>
@@ -39,7 +40,7 @@
 			        		<section id="sujet_exp_form">
 	                            <p class="text-justify"><strong>Stage de Licence 3 chez COFELY ENDEL Bordeaux, 06/2013-09/2013, 3 mois</strong><br>
 	                                Il s'agit de mettre en place une interface graphique conviviale et ergonomique permettant à des utilisateurs pas forcément informaticiens de pouvoir ajouter , supprimer, modifier, chercher et trier des données en grande quantité dans des fichiers EXCEL accessibles dans le réseau des employers. On a utilisé VBA comme langage de programmation pour coder toutes ces fonctionnalités et le système d'interfaçage de Excel qui permet de lier des boutons à des macros et donc d’exécuter une multitude de taches derrières. Pour la même occasion, un graphisme permettant de donner une évolution concrète des chiffres et des données est mis à disposition des utilisateurs.
-	                                </p>	            
+	                            </p>	            
                         	</section>
 			        	</div> 
 			        </div>	
@@ -58,9 +59,9 @@
 			         <footer class="col-lg-12" id="footer_index">
 	                    <div id="pied" class="col-lg-12">
 	                        <ul id="nav_ul_barre_page">
-	                            <li id="nav_li_barre_page"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
-	                            <li id="nav_li_barre_page"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
-	                            <li id="nav_li_barre_page"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
+	                            <li id="nav_li_barre"><a href="http://www.u-bordeaux.fr/Pied-de-page/Credits-et-mentions-legales" id="a_li_barre_page"> Crédit et mentions légales</a></li>
+	                            <li id="nav_li_barre"><a href="http://www.u-bordeaux1.fr/ufr/math-info/formation/informatique/masters/master-informatique/specialite-genie-logiciel.html" id="a_li_barre_page"> Université de Bordeaux</a></li>
+	                            <li id="nav_li_barre"><a href="" id="a_li_barre_page"> Copyright © 2014 Moussa SOW</a></li>
 	                        </ul>
 	                    </div>
                 	</footer>	
