--- a/mycompetence.html
+++ b/mycompetence.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">
         <script src="script2.js"></script>
+        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
     </head>
     <body>
         <div id="bloc_page" class="container">
@@ -22,6 +23,10 @@
                                 <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
                                 <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
                             </ul>
+                        <div class="check_menu">
+                            <div class="title_menu"> Menu</div>
+                            <div class="header__icon" id="header__icon"></div>
+                        </div>
 		            </nav>
 		        </div>
             </div>
@@ -396,7 +401,8 @@
                         </div>
                     </div> 
                 </div>
-                <script src="scripts.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
+            <script src="scripts.js"></script>
             </div>
         </div>
     </body>
