--- a/myformation.html
+++ b/myformation.html
@@ -6,6 +6,7 @@
         <link href="bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
         
     </head>
   	<body>
@@ -22,6 +23,10 @@
                                 <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
                                 <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
                             </ul>
+                        <div class="check_menu">
+                            <div class="title_menu"> Menu</div>
+                            <div class="header__icon" id="header__icon"></div>
+                        </div>
 		            </nav>
 		        </div>
 	      	</div>
@@ -118,6 +123,8 @@
 		        </div>
 		    </div>
 	  	</div>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
+            <script src="scripts.js"></script>
   	</body>
  </html>
 
