--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,18 @@ mail($to,$subject,$message,$headers);
 ?>
 
 
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>CV - baye Moussa</title>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+        <meta charset="UTF-8" />
+
         <link href="bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="tuto.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
         
     </head>
    <body>
@@ -41,28 +44,31 @@ mail($to,$subject,$message,$headers);
         </div>
 
         <div id="corps" class="col-lg-12">
-            <div class="col-lg-4">
-                <div id="nom"> MOUSSA SOW :</div>
-                <div>
-                   <p id= "ad_et_tel">20 rue eugene le roy <br>
-                        33800 bordeaux, apt 22  <br>
-                        Tél: +33 (0)6 26 92 00 08 <br>
-                        Mail: mmoussasow@gmail.com<br>  
-                    </p>
+            <div class="col-lg-6">
+                <div  class="col-lg-12">
+                    <div id="nom"> MOUSSA SOW :</div>
+                    <div>
+                       <p id= "ad_et_tel">20 rue eugene le roy <br>
+                            33800 bordeaux, apt 22  <br>
+                            Tél: +33 (0)6 26 92 00 08 <br>
+                            Mail: mmoussasow@gmail.com<br>  
+                        </p>
+                    </div>
                 </div>
+                <div class="col-lg-12" id="carte"></div>
             </div>
-            <div class=" col-lg-8"> 
+            <div class=" col-lg-6"> 
                 <div id="entete_form">Prenez Contact avec moi</div>
                 <div class="col-lg-12" id="form_contact">
 	 				<form class="form-horizontal col-lg-12">
 					  <div class="form-group">
-					    <legend>Vous pouvez saisir vos informations ici pour être recontacté!!!</legend>
+					    <legend>Veillez laisser votre message pour être recontacté!!!</legend>
 					  </div>
 					  <div class="row">
 					    <div class="form-group">
 					      <label for="text" class="col-lg-2 control-label">Nom : </label>
 					      <div class="col-lg-4">
-					        <input type="text" class="form-control" id="nom_form" placeholder="Saisissez votre nom et prénom">
+					        <input type="text" class="form-control" id="nom_form" placeholder="Saisissez votre nom et prénom"  required>
 					      </div>
 					    </div>
 					  </div>
@@ -70,7 +76,7 @@ mail($to,$subject,$message,$headers);
 					    <div class="form-group">
 					      <label for="text" class="col-lg-2 control-label">Objet : </label>
 					      <div class="col-lg-4">
-					        <input type="text" class="form-control" id="objet" placeholder="Objet de demande">
+					        <input type="text" class="form-control" id="objet" placeholder="Objet de demande" required>
 					      </div>
 					    </div>
 					  </div>
@@ -78,7 +84,7 @@ mail($to,$subject,$message,$headers);
 					    <div class="form-group">
 					      <label for="text" class="col-lg-2 control-label">Mail : </label>
 					      <div class="col-lg-4">
-					        <input type="text" class="form-control" id="mail" placeholder="Votre mail">
+					        <input type="text" class="form-control" id="mail" placeholder="Votre mail"  required>
 					      </div>
 					    </div>
 					  </div>
@@ -86,7 +92,7 @@ mail($to,$subject,$message,$headers);
 					    <div class="form-group">
 					      <label for="textarea" class="col-lg-2 control-label">Message : </label>
 					      <div class="col-lg-4">
-					        <input type="textarea" class="form-control" id="message" placeholder="Votre message">
+					        <input type="textarea" class="form-control" id="message" placeholder="Votre message"  required>
 					      </div>
 					    </div>
 					  </div>
@@ -111,6 +117,13 @@ mail($to,$subject,$message,$headers);
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
     <script src="scripts.js"></script>
+    <script type="text/javascript" src="js/carte.js"></script>
+    <noscript>
+            <p>Attention : </p>
+            <p>Afin de pouvoir utiliser Google Maps, JavaScript doit être activé.</p>
+            <p>Or, il semble que JavaScript est désactivé ou qu'il ne soit pas supporté par votre navigateur.</p>
+            <p>Pour afficher Google Maps, activez JavaScript en modifiant les options de votre navigateur, puis essayez à nouveau.</p>
+        </noscript>
   </body>
 </html>
 
