final versus ordi

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@ mail($to,$subject,$test_mes,$headers);
 
         <link href="bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
         
     </head>
