--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="icon" type="image/jpg" href="/images/favicone1.jpg" />
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:992px)">
+        <link href="css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:992px)">
    	</head>
     <body>
        <div id="bloc_page" class="container">
