--- a/mycompetence.html
+++ b/mycompetence.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style_competence.css">
-        <link href="bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/style_competence.css">
+        <link href="css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="tuto.css" rel="stylesheet">
-        <script src="script2.js"></script>
-        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="css/tuto.css" rel="stylesheet">
+        <script src="js/script2.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
     </head>
     <body>
         <div id="bloc_page" class="container">
