--- a/telecharger.html
+++ b/telecharger.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
-        <link href="bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
         
     </head>
    <body>
