final versus ordi

--- a/html/myexperience.html
+++ b/html/myexperience.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="css/tuto.css" rel="stylesheet">        
-        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link href="../css/tuto.css" rel="stylesheet">        
+        <link rel="stylesheet" type="text/css" href="../css/responsive_menu.css" media="screen and (max-width:1201px)">
     </head>
   	<body>
 	    <div id="bloc_page"  class="container">
@@ -14,7 +14,7 @@
 		        <div id="tete" class="col-lg-12">
 		            <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
                             <ul id="nav_ul_barre_page">
-                                <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                                <li id="nav_li_barre"><a href="../index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
                                 <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
                                 <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
                                 <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
