--- a/html/telecharger.html
+++ b/html/telecharger.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="css/tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link href="../css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../css/responsive_menu.css" media="screen and (max-width:1201px)">
         
     </head>
    <body>
-    <div class="container">
+    <div  id="bloc_page" class="container">
       <div class="row">
         <div id="tete" class="col-lg-12">
             <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
                 <ul id="nav_ul_barre_page">
-                    <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                    <li id="nav_li_barre"><a href="../index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
                     <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
                     <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
                     <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
@@ -43,7 +43,7 @@
             </div>
             <div class="col-lg-offset-1 col-lg-7"> 
                 <div id="entete">Cliquer sur l'icone pour Télécharger mon CV</div>
-                <article> <a href="cv_moussa_sow.pdf"> <img src="images/telecharger.jpg" alt="Telecharger_cv_moussa_sow"></a></article>
+                <article> <a href="cv_moussa_sow.pdf"> <img src="../images/telecharger.jpg" alt="Telecharger_cv_moussa_sow"></a></article>
             </div>
         </div>
          <footer class="col-lg-12" id="footer_index">
