--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <nav id="nav_barre_page_telecharge" class="col-md-offset-1 col-md-10"> 
                         <ul id="nav_ul_barre_page">
                             <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
-                            <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
-                            <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
-                            <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
-                            <li id="nav_li_barre"><a href="portefolio.html"> <span class="glyphicon glyphicon-tasks"></span> Portefolio</a></li>
-                            <li id="nav_li_barre"><a href="contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
-                            <li id="nav_li_barre"><a href="telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
+                            <li id="nav_li_barre"><a href="html/myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
+                            <li id="nav_li_barre"><a href="html/myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
+                            <li id="nav_li_barre"><a href="html/mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
+                            <li id="nav_li_barre"><a href="html/portefolio.html"> <span class="glyphicon glyphicon-tasks"></span> Portefolio</a></li>
+                            <li id="nav_li_barre"><a href="html/contact.html"> <span class="glyphicon glyphicon-home"></span> Contact</a></li>
+                            <li id="nav_li_barre"><a href="html/telecharger.html"> <span class="glyphicon glyphicon-download-alt"></span> Télécharger CV</a></li>
                         </ul>
                         <div class="check_menu">
                             <div class="title_menu"> Menu</div>
