--- a/html/contact.html
+++ b/html/contact.html
@@ -17,20 +17,20 @@ mail($to,$subject,$test_mes,$headers);
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
         <meta charset="UTF-8" />
 
-        <link href="bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="css/tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="../bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link href="../css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../css/responsive_menu.css" media="screen and (max-width:1201px)">
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
         
     </head>
    <body>
-    <div class="container">
+    <div id="bloc_page"  class="container">
       <div class="row">
         <div id="tete" class="col-lg-12">
             <nav id="nav_barre_page_telecharge" class="col-lg-offset-1 col-lg-10"> 
                     <ul id="nav_ul_barre_page">
-                        <li id="nav_li_barre"><a href="index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
+                        <li id="nav_li_barre"><a href="../index.html"> <span class="glyphicon glyphicon-user"></span> À propos de moi</a></li>
                         <li id="nav_li_barre"><a href="myformation.html"> <span class="glyphicon glyphicon-education"></span> Formation</a></li>
                         <li id="nav_li_barre"><a href="myexperience.html">  <span class="glyphicon glyphicon-briefcase"></span> Expérience</a></li>
                         <li id="nav_li_barre"><a href="mycompetence.html"> <span class="glyphicon glyphicon-level-up"></span> Compétences</a></li>
@@ -118,8 +118,8 @@ mail($to,$subject,$test_mes,$headers);
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
-    <script src="scripts.js"></script>
-    <script type="text/javascript" src="js/carte.js"></script>
+    <script src="../scripts.js"></script>
+    <script type="text/javascript" src="../js/carte.js"></script>
     <noscript>
             <p>Attention : </p>
             <p>Afin de pouvoir utiliser Google Maps, JavaScript doit être activé.</p>
