--- a/html/myformation.html
+++ b/html/myformation.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>CV - baye Moussa</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link href="css/tuto.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:1201px)">
+        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link href="../css/tuto.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../css/responsive_menu.css" media="screen and (max-width:1201px)">
         
     </head>
   	<body>
