--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@ mail($to,$subject,$test_mes,$headers);
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
         <meta charset="UTF-8" />
 
-        <link href="../bootstrap.css" rel="stylesheet">
+        <link href="../css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
         <link href="../css/tuto.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../css/responsive_menu.css" media="screen and (max-width:1201px)">
@@ -118,7 +118,7 @@ mail($to,$subject,$test_mes,$headers);
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
-    <script src="../scripts.js"></script>
+    <script src="../js/scripts.js"></script>
     <script type="text/javascript" src="../js/carte.js"></script>
     <noscript>
             <p>Attention : </p>
