--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="css/tuto.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/responsive_menu.css" media="screen and (max-width:992px)">
+        <link rel="stylesheet" type="text/css" href="css/responsive.css" media="screen and (max-width:992px)">
    	</head>
     <body>
        <div id="bloc_page" class="container">
@@ -34,7 +35,7 @@
                 </div>
             </div>
             <div class="row" id="corps_index">
-                <div class="col-md-3">
+                <div class="col-md-3" id="panelaside">
                     <aside id="tataaside"> 
                         <h1><strong>À propos:</strong></h1>
                         <p> SOW MOUSSA : <br></p>    
@@ -57,21 +58,21 @@
                 <div class="col-md-3" id="liens_sociaux">
                     <img src="images/ma_tof.jpg" alt="Ma photo"  id="ma_photo" class="col-md-12 img-rounded">
                     <div class="col-md-12" id="ligne_lien_1">
-                        <p>
+                        <p id="ligne_lien_11">
                             <a href="http://www.viadeo.com/profile/0021mjem2xkpjchw">
-                                <img src="images/viadeo-icon.png" alt="viadeo"  class="img-rounded">
+                                <img src="images/viadeo-icon.png" alt="viadeo"  class="img-rounded" id="tof_lien" >
                             </a>                        
                             <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">
-                                <img src="images/linkedin-icon.png" alt="linkdin"  class="img-rounded">
+                                <img src="images/linkedin-icon.png" alt="linkdin"  class="img-rounded" id="tof_lien">
                             </a>
-                            <a href="https://plus.google.com/u/0/103485519685772720465/posts"  class="img-rounded"><img src="images/google-icon.png" alt="google+"  class="img-rounded"></a>                          
+                            <a href="https://plus.google.com/u/0/103485519685772720465/posts"  class="img-rounded"><img src="images/google-icon.png" alt="google+"  class="img-rounded" id="tof_lien"></a>                          
                         </p>
                     </div>
-                    <div class="col-md-12"> 
+                    <div class="col-md-12" id="ligne_lien_2"> 
                         <p id="taille_lien_foot">
-                            <img src="images/rss.png" alt="RSS" class="img-rounded">
-                            <img src="images/twitter.png" alt="Twitter"  class="img-rounded">
-                            <a href="https://www.facebook.com/kountou1?ref=ts&fref=ts"><img src="images/facebook.png" alt="Facebook"   class="img-rounded"></a> 
+                            <img src="images/rss.png" alt="RSS" class="img-rounded" id="tof_lien">
+                            <img src="images/twitter.png" alt="Twitter"  class="img-rounded" id="tof_lien">
+                            <a href="https://www.facebook.com/kountou1?ref=ts&fref=ts"><img src="images/facebook.png" alt="Facebook"   class="img-rounded" id="tof_lien"></a> 
                         </p>
                     </div>
                 </div>
@@ -87,6 +88,6 @@
                 </footer>
             </div>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
-            <script src="scripts.js"></script>
+            <script src="js/scripts.js"></script>
 	</body>
 </html>
