--- a/html/myexperience.html
+++ b/html/myexperience.html
@@ -74,7 +74,7 @@
 		    </div>
 	  	</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
-        <script src="scripts.js"></script>
+        <script src="../js/scripts.js"></script>
   	</body>
  </html>
 
